--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,15 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-gray-900 text-gray-100;
+}
+
+@theme {
+  --color-gray-900: #121214;
+  --color-gray-800: #202024;
+  --color-gray-300: #c4c4cc;
+  --color-gray-100: #e1e1e6;
+
+  --color-green-500: #00875f;
+  --color-green-300: #00b37e;
 }
